# pdf-craft

./: README.md  README_ja.md  README_zh-CN.md  pyproject.toml
.agents/skills/pdf-craft/: SKILL.md
.agents/skills/pdf-craft/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: pdf-craft-instincts.yaml
.codex/: AGENTS.md
docs/: DEVELOPMENT_ja.md  INSTALLATION_ja.md  RELEASE_ja.md
docs/changelog/: v1.0.13_ja.md
pdf_craft/: expression.py  transform.py
pdf_craft/common/: reader.py  statistics.py  xml.py
pdf_craft/epub/: toc_collection.py
pdf_craft/llm/: executor.py  increasable.py
pdf_craft/pdf/: handler.py  page_ref.py  types.py
pdf_craft/sequence/: chapter.py  generation.py  mark.py  reader.py
pdf_craft/toc/: analysing.py  llm_analyser.py  types.py
scripts/: clean_analysing.py  gen_epub.py  gen_md.py
tests/: test_toc_llm_analyser.py
