[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pdf-craft"
version = "1.0.13"
description = "pdf-craft は PDF ファイルを様々なフォーマットに変換するツールです。特にスキャンされた書籍の PDF 処理に特化しています。"
license = "MIT"
authors = ["Tao Zeyu <i@taozeyu.com>"]
maintainers = ["Tao Zeyu <i@taozeyu.com>"]
readme = "README.md"
homepage = "https://hub.oomol.com/package/pdf-craft"
repository = "https://github.com/oomol-lab/pdf-craft"
keywords = ["pdf", "epub", "markdown"]
packages = [
    {include = "pdf_craft" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pdf2image = "^1.17.0"
pypdf = "^6.6.0"
tiktoken = ">=0.12.0,<1.0.0"
openai = ">=2.14.0,<3.0.0"
json-repair = ">=0.55.0,<0.56.0"
pydantic = ">=2.12.5,<3.0.0"
doc-page-extractor = "==1.0.12"
epub-generator = "==0.1.7"
pylatexenc = "^2.10"
pyahocorasick = "^2.2.0"
markdownify = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pyright = "^1.1.407"
ruff = "^0.14.11"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "none"
